compiler/lume_parse/src/snapshots/lume_parse__tests__generic_struct_snapshots@no_generics.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"struct Test {}\")"
---
SOURCE_FILE@0..12
  STRUCT@0..12
    STRUCT_KW@0..6 "struct"
    IDENT@6..10 "Test"
    LEFT_BRACE@10..11 "{"
    RIGHT_BRACE@11..12 "}"
