compiler/lume_parse/src/snapshots/lume_parse__tests__generic_struct_snapshots@single_generic.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"struct Test<T> {}\")"
---
SOURCE_FILE@0..15
  STRUCT@0..15
    STRUCT_KW@0..6 "struct"
    IDENT@6..10 "Test"
    BOUND_TYPES@10..13
      LESS@10..11 "<"
      BOUND_TYPE@11..12
        IDENT@11..12 "T"
      GREATER@12..13 ">"
    LEFT_BRACE@13..14 "{"
    RIGHT_BRACE@14..15 "}"
