compiler/lume_parse/src/snapshots/lume_parse__tests__generic_struct_snapshots@trailing_generic_comma.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"struct Test<T1,> {}\")"
---
SOURCE_FILE@0..17
  STRUCT@0..17
    STRUCT_KW@0..6 "struct"
    IDENT@6..10 "Test"
    BOUND_TYPES@10..15
      LESS@10..11 "<"
      BOUND_TYPE@11..13
        IDENT@11..13 "T1"
      COMMA@13..14 ","
      GREATER@14..15 ">"
    LEFT_BRACE@15..16 "{"
    RIGHT_BRACE@16..17 "}"
