compiler/lume_parse/src/snapshots/lume_parse__tests__imports@expected_identifier.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"import std::io::\")"
---
IMPORT@0..15
  IMPORT_KW@0..6 "import"
  IMPORT_PATH@6..15
    IDENT@6..9 "std"
    PATH_SEP@9..11 "::"
    IDENT@11..13 "io"
    PATH_SEP@13..15 "::"

expected identifier@14..15
invalid import path@0..0
