compiler/lume_parse/src/snapshots/lume_parse__tests__imports@nested.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(\"import std::io (File)\")"
---
SOURCE_FILE@0..19
  IMPORT@0..19
    IMPORT_KW@0..6 "import"
    IMPORT_PATH@6..13
      IDENT@6..9 "std"
      PATH_SEP@9..11 "::"
      IDENT@11..13 "io"
    IMPORT_LIST@13..19
      LEFT_PAREN@13..14 "("
      IDENT@14..18 "File"
      RIGHT_PAREN@18..19 ")"
