compiler/lume_parse/src/snapshots/lume_parse__tests__imports@single.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(\"import std (Int)\")"
---
SOURCE_FILE@0..14
  IMPORT@0..14
    IMPORT_KW@0..6 "import"
    IMPORT_PATH@6..9
      IDENT@6..9 "std"
    IMPORT_LIST@9..14
      LEFT_PAREN@9..10 "("
      IDENT@10..13 "Int"
      RIGHT_PAREN@13..14 ")"
