compiler/lume_parse/src/snapshots/lume_parse__tests__is_snapshots@identifier.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Statement, \"0 is test;\")"
---
SOURCE_FILE@0..10
  EXPR_STMT@0..10
    IS_EXPR@0..9
      LIT_EXPR@0..1
        LITERAL@0..1
          INTEGER_LIT@0..1 "0"
      WHITESPACE@1..2 " "
      IS_KW@2..4 "is"
      WHITESPACE@4..5 " "
      PAT@5..9
        PAT_IDENT@5..9
          PATH@5..9
            PATH_SEGMENT@5..9
              PATH_NAMESPACE@5..9
                IDENT@5..9 "test"
    SEMICOLON@9..10 ";"
